package ar.edu.utn.frba.dds.domain.entities;

public enum EstadoDeSolicitud {
    ACEPTADA,
    RECHAZADA,
    PENDIENTE,
    SPAM //TODO podemos hacer esto o agregar un booleano a la entidad
}
